@@ -9,9 +9,6 @@ import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 public class AxisYControllerTest {
-  private AxisYControllerTest() {
-  }
-
   @DataProvider(name = "fullData")
   public static Object[][] fullData() {
     return new Object[][] {
@@ -24,11 +21,11 @@ public class AxisYControllerTest {
 
 
   @Test(dataProvider = "fullData")
-  public static void testScale(IntStream data, int mean, int scaleFactor) {
+  public void testScale(IntStream data, int mean, int scaleFactor) {
     AxisYController<ADCVariable> controller = new AxisYController<>();
     controller.setLineDiagramHeight(GridCell.mmToScreen(233));
     ScaleYInfo<ADCVariable> scaleYInfo = controller.scale(ADCVariable.ADC, data.toArray());
-    Assert.assertTrue(scaleYInfo.toString().startsWith(String.format("ScaleYInfo{mean = %d, scaleFactor = %d", mean, scaleFactor)), scaleYInfo.toString());
+    Assert.assertTrue(scaleYInfo.toString().startsWith("ScaleYInfo{mean = %d, scaleFactor = %d".formatted(mean, scaleFactor)), scaleYInfo.toString());
     Assert.assertEquals(GridCell.mm(scaleYInfo.applyAsDouble(0)), (0.0 - mean) / scaleFactor, 0.1, scaleYInfo.toString());
     Assert.assertEquals(scaleYInfo.apply(0.0), Variables.toString(mean, ADCVariable.ADC.getUnit(), scaleFactor), scaleYInfo.toString());
   }
